Correct z-Index of map popup
This avoids that the map popup is rendered over the info modal.

--- a/res/css/api-creator.css
+++ b/res/css/api-creator.css
@@ -44,6 +44,10 @@ h4 {
   font-size: 16px;
 }
 
+.popover {
+  z-index: 1049;
+}
+
 .ol-attribution li {
   font-size: 1.0rem;
 }
